--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="@color/white"
     android:orientation="vertical"
     android:padding="20dp">
 
@@ -16,10 +18,10 @@
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:drawablePadding="10dp"
         android:hint="@string/email"
+        android:drawableTint="@color/black"
         android:padding="15dp"
         android:textColor="@color/black"
-        android:textColorHighlight="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="#000" />
 
     <EditText
         android:id="@+id/etPassword"
@@ -28,16 +30,16 @@
         android:layout_margin="10dp"
         android:background="@drawable/shapeemail"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
-        android:password="true"
         android:drawablePadding="10dp"
+        android:drawableTint="@color/black"
         android:hint="@string/password"
         android:padding="15dp"
+        android:password="true"
         android:textColor="@color/black"
-        android:textColorHighlight="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="#000" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,11 +47,11 @@
         android:layout_marginTop="50dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/shapelogin"
         android:padding="15dp"
         android:shadowColor="@android:color/transparent"
         android:text="@string/log_in"
-        android:textAllCaps="false" />
+        android:textAllCaps="false"
+        app:cornerRadius="20dp" />
 
 
 </LinearLayout>
