--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/white"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="20dp">
-
 
     <EditText
         android:id="@+id/etUsername"
@@ -17,11 +16,11 @@
         android:background="@drawable/shapeemail"
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:drawablePadding="10dp"
+        android:drawableTint="@color/blue_base"
         android:hint="@string/email"
-        android:drawableTint="@color/black"
         android:padding="15dp"
-        android:textColor="@color/black"
-        android:textColorHint="#000" />
+        android:textColor="@color/dark_blue"
+        android:textColorHint="@color/blue_base" />
 
     <EditText
         android:id="@+id/etPassword"
@@ -31,12 +30,12 @@
         android:background="@drawable/shapeemail"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:drawablePadding="10dp"
-        android:drawableTint="@color/black"
+        android:drawableTint="@color/blue_base"
         android:hint="@string/password"
         android:padding="15dp"
         android:password="true"
-        android:textColor="@color/black"
-        android:textColorHint="#000" />
+        android:textColor="@color/dark_blue"
+        android:textColorHint="@color/blue_base" />
 
 
     <com.google.android.material.button.MaterialButton
@@ -51,26 +50,38 @@
         android:shadowColor="@android:color/transparent"
         android:text="@string/log_in"
         android:textAllCaps="false"
-        app:cornerRadius="20dp" />
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:cornerRadius="20dp"
+        app:rippleColor="@color/dark_blue" />
 
-
-    <Button
-        android:id="@+id/btn1"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="1"
-        android:textAllCaps="false" />
+        android:layout_marginTop="30dp"
+        android:gravity="bottom"
+        android:text="@string/forgot_password"
+        android:textColor="@color/black"
+        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/btn2"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="2"
-        android:textAllCaps="false" />
+        android:layout_marginTop="3dp"
+        android:gravity="bottom"
+        android:text="@string/contact_support"
+        android:textColor="@color/dark_blue"
+        android:textStyle="normal" />
+
+
+    <!--    <Button-->
+    <!--        android:id="@+id/btn1"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:text="1"-->
+    <!--        android:textAllCaps="false" />-->
 
 
 </LinearLayout>
