--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -12,9 +12,10 @@
         android:id="@+id/etUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:singleLine="true"
         android:layout_margin="10dp"
         android:background="@drawable/shapeemail"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
+        android:drawableStart="@drawable/ic_baseline_person_24"
         android:drawablePadding="10dp"
         android:drawableTint="@color/blue_base"
         android:hint="@string/email"
@@ -26,9 +27,11 @@
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:singleLine="true"
         android:layout_margin="10dp"
+        app:passwordToggleEnabled="true"
         android:background="@drawable/shapeemail"
-        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        android:drawableStart="@drawable/ic_baseline_lock_24"
         android:drawablePadding="10dp"
         android:drawableTint="@color/blue_base"
         android:hint="@string/password"
@@ -72,16 +75,5 @@
         android:text="@string/contact_support"
         android:textColor="@color/dark_blue"
         android:textStyle="normal" />
-
-
-    <!--    <Button-->
-    <!--        android:id="@+id/btn1"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_centerHorizontal="true"-->
-    <!--        android:layout_marginTop="20dp"-->
-    <!--        android:text="1"-->
-    <!--        android:textAllCaps="false" />-->
-
 
 </LinearLayout>
